Updates to work with EPIC that has PRISM inside it

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,22 +2,22 @@
 
 S3method(Summary,prism_input)
 S3method(print,prism_output)
-export(PRISM_generic_shiny_server)
 export(as.prism_output)
 export(canbe_prism_input)
 export(canbe_prism_output)
 export(connect_to_model)
 export(get_default_input)
-export(get_default_output)
 export(get_model_input)
-export(get_output)
+export(get_output_structure)
 export(get_session_info)
 export(make_app)
+export(make_app.simple)
 export(model_run)
 export(prism_input)
 export(prism_output)
 export(set_model_input)
 export(temp)
 export(to_prism_input)
+export(to_prism_output)
 import(httr)
 import(jsonlite)
