--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,3 +21,6 @@ export(to_prism_input)
 export(to_prism_output)
 import(httr)
 import(jsonlite)
+importFrom(graphics,par)
+importFrom(graphics,plot.new)
+importFrom(graphics,rasterImage)
