Session-less API call connect_to_model is no longer mandatory
One post instead of one mpost and one get

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(INPUT_TYPE_NUMERIC_VECTOR)
 export(INPUT_TYPE_STRING_MATRIX)
 export(INPUT_TYPE_STRING_SCALAR)
 export(INPUT_TYPE_STRING_VECTOR)
+export(PRISM_call)
 export(as.prism_output)
 export(canbe_prism_input)
 export(canbe_prism_output)
@@ -30,6 +31,7 @@ export(get_model_input)
 export(get_output_structure)
 export(get_plots)
 export(get_session_info)
+export(hand_wave)
 export(make_app)
 export(model_run)
 export(prism_input)
