--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: prism
 Title: Client-side R API wrapper for PRISM clinical prediction models
-Version: 0.5.1
+Version: 0.5.2
 Authors@R: c(person("amin", "adibi", email = "adibi@alumni.ubc.ca", role = c("aut", "cre")),
              person("Mohsen", "Sadatsafavi", email = "mohsen.sadatsafavi@ubc.ca", role = c("aut", "cph")))
 Description: PRISM will enable our models to be easily accessible to the research community.
-Depends: R (>= 3.5.1)
+Depends: R (>= 3.6.0)
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Imports:
     jsonlite,
-    httr
-RoxygenNote: 6.1.1
+    httr,
+    png
+RoxygenNote: 7.1.0
