--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,3 +43,4 @@ import(jsonlite)
 importFrom(graphics,par)
 importFrom(graphics,plot.new)
 importFrom(graphics,rasterImage)
+importFrom(stringr,str_remove)
