authentication problem solved

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,4 +43,5 @@ import(jsonlite)
 importFrom(graphics,par)
 importFrom(graphics,plot.new)
 importFrom(graphics,rasterImage)
+importFrom(stringr,str_detect)
 importFrom(stringr,str_remove)
