--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(prism_model_run)
 export(prism_reset_session)
 import(httr)
 import(jsonlite)
+importFrom(grDevices,as.raster)
 importFrom(graphics,par)
 importFrom(graphics,plot.new)
 importFrom(graphics,rasterImage)
