--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: peermodels
-Title: Client-side R API Wrapper for Peer Models Network Model Repository 
+Title: Client-Side R API Wrapper for Peer Models Network Model Repository 
 Version: 0.10.1
 Authors@R: c(person("amin", "adibi", email = "adibi@alumni.ubc.ca", role = c("aut", "cre")),
              person("Mohsen", "Sadatsafavi", email = "mohsen.sadatsafavi@ubc.ca", role = c("aut", "cph")))
