--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,7 @@ export(handshake)
 export(model_run)
 export(prism_call)
 export(reset_session)
-import(httr)
+import(httr2)
 import(jsonlite)
 importFrom(grDevices,as.raster)
 importFrom(graphics,par)
