--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: peermodels
 Title: Client-Side R API Wrapper for Peer Models Network Model Repository 
-Version: 0.10.3
+Version: 0.10.3.999
 Authors@R: c(person("amin", "adibi", email = "adibi@alumni.ubc.ca", role = c("aut", "cre")),
              person("Mohsen", "Sadatsafavi", email = "mohsen.sadatsafavi@ubc.ca", role = c("aut", "cph")))
 Description: Enables direct cloud access to health care decision models hosted on the PRISM server of the Peer Models Network.
@@ -11,6 +11,6 @@ LazyData: true
 URL: https://www.peermodelsnetwork.com
 Imports:
     jsonlite,
-    httr,
+    httr2,
     stringr
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
