checks internet connection

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(prism_call)
 export(reset_session)
 import(httr2)
 import(jsonlite)
+importFrom(curl,has_internet)
 importFrom(grDevices,as.raster)
 importFrom(graphics,par)
 importFrom(graphics,plot.new)
