--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ LazyData: true
 URL: https://www.peermodelsnetwork.com
 Imports:
     jsonlite,
+    curl,
     httr2,
     stringr
 RoxygenNote: 7.1.2
