--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,5 +17,8 @@ importFrom(grDevices,as.raster)
 importFrom(graphics,par)
 importFrom(graphics,plot.new)
 importFrom(graphics,rasterImage)
+importFrom(httr,GET)
+importFrom(httr,add_headers)
+importFrom(httr,content)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_remove)
