APIs now stored as environment variables

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(handshake)
 export(model_run)
 export(prism_call)
 export(reset_session)
+export(set_api_key)
+export(show_api_key)
 import(httr)
 import(jsonlite)
 importFrom(grDevices,as.raster)
